4th commit fixed spacing issues

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,8 +14,5 @@
 
 #agreements{
     background-color: rgb(199, 195, 195);
-    margin:0;
-    padding: 0;
-    width: 100;
+    height: 200px;
 }
-
